filling the contact links

--- a/index.html
+++ b/index.html
@@ -34,31 +34,32 @@
         <div>
             <ul>
                 <li>
-                    <a href="#" target="_blank">Baixar meu Currículo</a>
+                    <a href="https://github.com/Jonntz" target="_blank">Acessar meu Github</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">Acessar meu Github</a>
+                    <a href="https://www.linkedin.com/in/jonatas-sousa-monteiro" target="_blank">Acessar meu
+                        Linkedin</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">Entrar em contato pelo WhatsApp</a>
+                    <a href="./assets/Resume2023.pdf" target="_blank">Baixar meu Currículo</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">Acessar meu Linkedin</a>
+                    <a href="https://wa.me/5511969434837" target="_blank">Entrar em contato pelo WhatsApp</a>
                 </li>
             </ul>
         </div>
 
         <div class="social-links">
-            <a href="#">
+            <a href="https://github.com/Jonntz" target="_blank">
                 <ion-icon name="logo-github"></ion-icon>
             </a>
-            <a href="#">
+            <a href="https://www.linkedin.com/in/jonatas-sousa-monteiro" target="_blank">
                 <ion-icon name="logo-linkedin"></ion-icon>
             </a>
-            <a href="#">
+            <a href="https://wa.me/5511969434837" target="_blank">
                 <ion-icon name="logo-whatsapp"></ion-icon>
             </a>
-            <a href="#">
+            <a href="mailto:monteirojonatas23@gmail.com?subject=Employee" target="_top">
                 <ion-icon name="mail"></ion-icon>
             </a>
         </div>
