--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a href="https://wa.me/5511969434837" target="_blank">
                 <ion-icon name="logo-whatsapp"></ion-icon>
             </a>
-            <a href="mailto:monteirojonatas23@gmail.com?subject=Employee" target="_top">
+            <a href="mailto:monteirojonatas23@gmail.com?subject=Employee" target="_blank">
                 <ion-icon name="mail"></ion-icon>
             </a>
         </div>
