Add description text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
 
     <title>Links</title>
@@ -29,6 +29,19 @@
                 <span class="subtitle">@Jonntz</span>
             </p>
 
+
+            <div class="description">
+                <p>
+                    <strong>Hello world!!</strong><br>
+                    Me chamo Jonatas, sou um desenvolvedor de 23 anos apaixonado por tecnologia que transforma linhas de
+                    código em soluções
+                    para os mais diversos problemas. Com uma mente criativa e habilidades técnicas afiadas,
+                    busco constantemente desafios que impulsionem o meu crescimento profissional.
+                    Explore os links a seguir e descubra como minha paixão pela programação se traduz em soluções.
+                    <br>
+                    <b>Vamos criar algo extraordinário juntos!</b>
+                </p>
+            </div>
         </div>
 
         <div>
